--- a/src/App.css
+++ b/src/App.css
@@ -39,24 +39,45 @@ h4 {
   width: 200px;
   height: 180px;
 }
+.row-sm {
+  display: none !important;
+}
 .row-envio-info {
   padding-top: 20px;
 }
 .col-info-icon {
+  padding-right:  0px !important;
   display: flex;
   align-items: right;
   justify-content: right;
 }
 .row-info-individual {
   padding-top: 5px;
-  font-size: 15px;
+  font-size: 14px;
 }
-.col-estado-order {
+.texto-icon {
+  display: none;
+}
+.col-row-sm {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.col-row-sm button {
+  width: 70%;
+}
+.col-estado-order {
+  display: flex;
+  align-items: right;
+  justify-content: right;
   font-size: 15px;
   color: grey;
+  padding-right: 20px !important;
+}
+#icon-circle-estado {
+  width: 9px;
+  padding-top: 3.35px;
+  padding-right: 5px;
 }
 .col-number-order{
   font-size: 15px;
@@ -69,6 +90,9 @@ h4 {
 .col-number-order, .col-estado-order {
   padding-top: 11px;
   padding-bottom: 11px;
+}
+.col-information-item {
+  border-left: 1px solid rgb(214, 214, 214);
 }
 .col-cancelar-pedido {
   padding-top: 8px;
@@ -84,37 +108,51 @@ h4 {
   justify-content: center;
 }
 .row-pedido {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: rgba(239, 239, 239, 0.422);
+}
+.row-cabecera-pedidos {
+  background-color: rgba(239, 239, 239, 0.422);
 }
 .col-order-inicial {
   padding: 5px 50px 0px 50px !important;
 }
 .row-item {
-  padding: 8px 70px 8px 70px !important;
+  padding: 20px 70px 20px 70px !important;
+  border-bottom: 1px solid rgba(223, 223, 223, 0.746);
 }
 .row-name-product {
-  padding: 20px 70px 0px 20px !important;
+  padding: 20px 20px 0px 50px !important;
 }
 .row-description-product {
   font-size: 12px;
-  padding: 10px 70px 0px 20px !important;
+  padding: 10px 20px 0px 50px !important;
 }
 .row-stock-product {
   font-size: 15px;
-  padding: 3px 70px 0px 20px !important;
+  padding: 3px 20px 0px 50px !important;
 }
 .row-price-product {
   font-size: 20px;
   font-weight: bold;
-  padding: 40px 70px 15px 20px !important;
+  padding: 40px 20px 15px 50px !important;
 }
-.col-order{
+.col-order {
+  padding: 7px 10px 0px 30px !important;
   color: rgb(128, 128, 128);
 }
 .col-order, .col-order-value {
-  padding: 7px 15px 0px 15px !important;
   font-size: 14px;
+}
+.row-estado-sm {
+  display: none !important;
+  font-size: 14px;
+  padding-bottom: 15px;
+  padding-left: 15px !important;
+}
+.icon-pedido {
+  padding-top: 3px;
 }
 
 /*Login*/
@@ -223,17 +261,33 @@ h4 {
 }
 
 /*Responsive*/
+
 @media screen and (max-width: 1560px) {
   .row-order-completo {
     padding-left: 0px !important;
     padding-right: 0px !important;
-    border: 3px solid red !important;
+  }
+  .row-item {
+    padding: 8px 40px 8px 40px !important;
+  }
+  .row-name-product, .row-description-product, .row-stock-product, .row-price-product {
+    padding-right: 10px !important;
+  }
+}
+@media screen and (max-width: 1515px) {
+  .row-item {
+    padding: 8px 32px 8px 32px !important;
   }
 }
 @media screen and (max-width: 1401px) {
   .col-order, .col-order-value {
     padding: 7px 5px 0px 15px !important;
     font-size: 14px;
+  }
+}
+@media screen and (max-width: 1399px) {
+  .row-item {
+    padding: 8px 10px 8px 10px !important;
   }
 }
 @media screen and (max-width: 1199px) {
@@ -250,7 +304,32 @@ h4 {
   .col-register-login {
     padding: 15px 40px 0px 40px !important;
   }
-} 
+}
+@media screen and (max-width: 1199px) {
+  .icon-pedido {
+    display: none;
+  }
+  .row-envio-info {
+    padding: 0px !important;
+  }
+  .row-info-individual {
+    padding-top: 0px !important;
+    font-size: 14px;
+  }
+  .texto-icon {
+    display: inline;
+  }
+  .col-info-icon {
+    padding: 7px 5px 0px 15px !important;
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    color: rgb(128, 128, 128);
+  }
+  .col-info-icon-value {
+    padding: 7px 5px 0px 15px !important;
+  }
+}  
 @media screen and (max-width: 1046px) {
   .col-message-reset-pass div{
     width: 85%;
@@ -269,7 +348,28 @@ h4 {
   .row-order-completo {
     padding-left: 5px !important;
     padding-right: 5px !important;
-    border: 3px solid red !important;
+  }
+  .row-sm {
+    padding-top: 60px;
+    display: block !important;
+  }
+  .col-cancelar-pedido {
+    display: none !important;
+  }
+}
+@media screen and (max-width: 888px) {
+  .img-pedidos {
+    width: 170px;
+    height: 150px;
+  }
+  .row-price-product {
+    padding: 8px 10px 10px 20px !important;
+  }
+  .row-description-product {
+    padding: 6px 10px 0px 20px !important;
+  }
+  .row-name-product {
+    padding: 15px 10px 0px 20px !important;
   }
 }
 @media screen and (max-width: 767px) {
@@ -286,11 +386,41 @@ h4 {
     padding: 5px 20px 0px 20px !important;
   }
   .col-order-inicial {
-    padding: 5px 0px 0px 0px !important;
+    padding: 5px 20px 0px 20px !important;
+  }
+  .col-imagen-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } 
+  .img-pedidos {
+    width: 160px;
+    height: 140px;
+  }
+  .row-name-product, .row-description-product, .row-stock-product, .row-price-product {
+    padding: 0px 5px 0px 5px !important;
+    text-align: center;
+  }
+  .col-order {
+    padding-bottom: 0px !important;
+  }
+  .col-order-value {
+    padding-top: 0px !important;
+  }
+  .col-info-icon-value {
+    padding-top: 0px !important;
   }
 }
 @media screen and (max-width: 620px) {
   .col-message-reset-pass div{
     width: 90%;
   }
-} 
+}
+@media screen and (max-width: 575px) {
+  .col-estado-order {
+    display: none !important;
+  }
+  .row-estado-sm {
+    display: inline !important;
+  }
+}
