--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ h4 {
   padding: 40px 20px 15px 50px !important;
 }
 .col-order {
-  padding: 7px 10px 0px 30px !important;
+  padding: 7px 6px 0px 30px !important;
   color: rgb(128, 128, 128);
 }
 .col-order, .col-order-value {
@@ -156,6 +156,16 @@ h4 {
 }
 .icon-pedido {
   padding-top: 3px;
+}
+.row-show-lg {
+  display: none !important;
+}
+.row-show-sm {
+  display: none !important;
+}
+.row-items-total {
+  border-left: 1px solid rgba(234, 234, 234, 0.683);
+  border-right: 1px solid rgba(234, 234, 234, 0.683);
 }
 
 /*Login*/
@@ -283,9 +293,11 @@ h4 {
   }
 }
 @media screen and (max-width: 1401px) {
-  .col-order, .col-order-value {
+  .col-order {
     padding: 7px 5px 0px 15px !important;
-    font-size: 14px;
+  }
+  .col-order-value {
+    padding-left:  0px !important;
   }
 }
 @media screen and (max-width: 1399px) {
@@ -301,6 +313,12 @@ h4 {
 @media screen and (max-width: 1199px) {
   .col-login {
     padding: 5px 40px 0px 40px !important;
+  }
+  .row-show-lg {
+    display: block !important;
+  }
+  .row-info-individual {
+    display: none !important;
   }
 }
 @media screen and (max-width: 1399px) {
@@ -385,7 +403,7 @@ h4 {
     padding: 6px 10px 0px 20px !important;
   }
   .row-name-product {
-    padding: 15px 10px 0px 20px !important;
+    padding: 22px 10px 0px 20px !important;
   }
   .row-stock-product {
     padding: 3px 10px 0px 20px !important;
@@ -423,6 +441,9 @@ h4 {
   .img-pedidos {
     width: 160px;
     height: 140px;
+  }
+  .row-name-product {
+    padding-top: 15px !important;
   }
   .row-name-product, .row-description-product, .row-stock-product, .row-price-product, .row-xsm-order {
     padding-left: 2px !important;
@@ -469,5 +490,20 @@ h4 {
   }
   .row-estado-sm {
     display: inline !important;
+    padding-left: 25px !important;
+  }
+  .row-show-sm {
+    display: block !important;
+    padding-left: 10px;
+  }
+  .row-show-lg, .row-order {
+    display: none !important;
+  }
+  .row-s-sm-t, .row-s-sm-v {
+    font-size: 14px;
+  }
+  .row-s-sm-t {
+    padding-top: 7px !important;
+    color: rgb(128, 128, 128);
   }
 }
