--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+#dropdown-menu {
+  margin-top: 5px;
+}
+#dropdown-toggle {
+  background-color: rgba(255, 255, 255, 0.215) !important;
+  border: none !important;
+  width: 45px;
+  display: flex;
+  align-items: right;
+  justify-content: right;
+}
+.menu-item-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/*Flechita desplegable*/
+button#dropdown-toggle.dropdown-toggle.btn.btn-primary::after {
+  display: none !important;
+}
 .container-panel {
   min-height: 100vh;
 }
@@ -27,6 +47,13 @@ footer {
 }
 h4 {
   text-align: center;
+}
+.logo {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  font-size: 45px;
+  color: rgb(17, 25, 109);
 }
 
 /*Comun properties*/
