--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,140 @@
+.hidde-before-lg, .show-1199 {
+  display: none !important;
+}
+.search-input {
+  border: none !important;
+  background-color: transparent !important;
+  border-radius: 0% !important;
+  border-bottom: 1px solid rgb(0, 0, 0) !important;
+  width: 100% !important;
+  padding: 0px !important;
+}
+.me-2 {
+  background-color: transparent !important;
+  border: none !important;
+  padding: 0px !important;
+}
+.col-search-inp {
+  padding-right: 5px !important;
+}
+.col-user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.col-carrito {
+  padding-left: 2px !important;
+}
+
+.mensaje-top {
+  font-size: 10px;
+  color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#estrella {
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+}
+
 #dropdown-menu {
   margin-top: 5px;
 }
 #dropdown-toggle {
-  background-color: rgba(255, 255, 255, 0.215) !important;
+  background-color: transparent !important;
   border: none !important;
-  width: 45px;
+  padding: 0px !important;
   display: flex;
   align-items: right;
   justify-content: right;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+}
+.menu-desplegable {
+  background-color: rgb(126, 126, 126);
+  width: 100%;
+}
+.css-wmhsuj-MuiBackdrop-root {
+  top: 680px !important;
+}
+.alert-menu {
+  height: 565px;
+  background-color: white !important;
+  border: none !important;
+}
+#imagen-sop {
+  width: 520px;
+}
+#imagen-sophia {
+  padding-left: 110px !important;
+}
+
+.menu-listado, .menu-lista-imagen {
+  height: 50%;
+}
+.col-alineada {
+  color: black;
+}
+.container-imagen-menu, .col-alineada{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container-global-imagenes {
+  height: 100% !important;
+}
+.imagen-menu {
+  border: 1px solid black;
+  height: 155px;
+  width: 160px;
+}
+.titulo-menu {
+  border: 1px solid black;
+}
+.container-imagen-menu {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.container-titulo-menu {
+  padding-top: 5px;
+  padding-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .menu-item-label {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.menu-item-label-ex {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+}
+.menu-item-label-nov {
+  display: flex;
+  align-items: right;
+  justify-content: right;
+}
+.menu-item-label, .menu-item-label-ex, .menu-item-label-nov {
+  font-size: 15px;
+  padding-top: 5px;
+}
+.clothes {
+  padding-left: 35px !important;
+}
+.ofertas {
+  padding-left: 5px !important;
+}
+
 /*Flechita desplegable*/
 button#dropdown-toggle.dropdown-toggle.btn.btn-primary::after {
   display: none !important;
@@ -26,17 +147,18 @@ button#dropdown-toggle.dropdown-toggle.btn.btn-primary::after {
   width: 100% !important;
 }
 .sub-header-row {
-  color: black;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  color: rgb(255, 255, 255);
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-color: rgb(0, 0, 0);
 }
 .header-row {
-  color: black;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  color: rgb(0, 0, 0);
+  padding-top: 20px;
+  padding-bottom: 0px;
   background-color: rgb(255, 255, 255);
-  border-bottom: 2px solid rgb(219, 219, 219);
+  height: 70px;
+  border-bottom: 1px solid rgba(219, 219, 219, 0.548);
 }
 footer {
   position: absolute;
@@ -48,18 +170,15 @@ footer {
 h4 {
   text-align: center;
 }
-.logo {
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  font-size: 45px;
-  color: rgb(17, 25, 109);
-}
 
 /*Comun properties*/
 .form-control::placeholder {
   font-size: 13px !important;
   color: rgb(175, 175, 175) !important;
+}
+.search-input::placeholder {
+  font-size: 13px !important;
+  color: rgb(0, 0, 0) !important;
 }
 .form-label {
   font-size: 13px !important;
@@ -342,6 +461,14 @@ h4 {
     padding-left: 0px !important;
     padding-right: 0px !important;
   }
+  #imagen-sophia {
+    padding-left: 70px !important;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .clothes {
+    padding-left: 20px !important;
+  }
 }
 @media screen and (max-width: 1401px) {
   .col-order {
@@ -354,6 +481,33 @@ h4 {
 @media screen and (max-width: 1399px) {
   .col-imagen-item img{
     margin-right: -70px !important;
+  }
+  .oculto-espacio-menu {
+    display: none !important;
+  }
+  .hidde-xl {
+    display: none !important;
+  }
+  .clothes {
+    padding-left: 5px !important;
+  }
+}
+@media screen and (max-width: 1360px) {
+  #imagen-sophia {
+    padding-left: 40px !important;
+  }
+}
+@media screen and (max-width: 1265px) {
+  #imagen-sophia {
+    padding-left: 15px !important;
+  }
+}
+@media screen and (max-width: 1250px) {
+  .hidde-1199 {
+    display: none !important;
+  }
+  .show-1199 {
+    display: block !important;
   }
 }
 @media screen and (max-width: 1200px) {
@@ -369,6 +523,34 @@ h4 {
     display: block !important;
   }
   .row-info-individual {
+    display: none !important;
+  }
+  .lg-display-none {
+    display: none !important;
+  }
+  .hidde-before-lg {
+    display: block !important;
+  }
+  .oculto-espacio-menu {
+    display: block !important;
+  }
+  .hidde-xl {
+    display: block !important;
+  }
+}
+@media screen and (max-width: 1165px) {
+  #imagen-sophia {
+    padding-left: 8px !important;
+  }
+}
+@media screen and (max-width: 1149px) {
+  .alert-menu {
+    display: none !important;
+  }
+  .css-wmhsuj-MuiBackdrop-root {
+    opacity: 0 !important;
+  }
+  .row-ALL-menu {
     display: none !important;
   }
 }
