--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-/***************************MENU***************************
+/*********************************************************
+***************************MENU***************************
 **********************************************************/
 
 /*----------Posicionamientos----------*/
@@ -142,7 +143,75 @@ button#dropdown-toggle-user.dropdown-toggle.btn.btn-primary::after {
 }
 
 /***********************************************************
+************************************************************
 ************************************************************/
+
+
+/*********************************************************
+***************************LOGIN***************************
+**********************************************************/
+
+/*----------Posicionamientos----------*/
+.col-login-button, .col-button-create-account {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*Login*/
+.col-login {
+  padding: 5px 80px 0px 80px !important;
+}
+.col-forgot-pss {
+  text-align: right;
+  padding: 8px 20px 0px 0px !important;
+}
+.col-forgot-pss a{
+  cursor: pointer;
+  text-decoration: none !important;
+  font-size: 12px;
+  color: rgb(136, 134, 134);
+}
+.col-forgot-pss a:hover {
+  color: rgb(63, 63, 63) !important;
+}
+.col-login-button {
+  padding: 60px 5px 10px 5px;
+}
+#create-account-button {
+  width: 40%;
+}
+#login-button {
+  width: 70%;
+}
+
+/*Create account*/
+.row-message-1-create-account, .row-message-2-create-account {
+  font-size: 12px;
+  color: rgb(136, 134, 134);
+}
+.row-message-1-create-account {
+  padding: 30px 25px 0px 25px;
+}
+.row-message-2-create-account {
+  padding: 8px 25px 0px 25px;
+}
+.col-button-create-account {
+  padding: 60px 5px 10px 5px;
+}
+
+/***********************************************************
+************************************************************
+************************************************************/
+
+.container-breadcrumb {
+  margin-top: 160px !important;
+  font-size: 10px;
+}
+.container-specific-content {
+  margin-top: 80px !important;
+  margin-bottom: 130px;
+}
 
 
 .container-panel {
@@ -182,11 +251,8 @@ h4 {
 .button-gestion:hover {
   background-color: rgb(107, 107, 107) !important;
 }
-
-/*Containers*/
-.container-login, .row-pedidos-content {
-  margin-top: 200px !important;
-  margin-bottom: 100px !important;
+.delimiter-menu {
+  background-color: aqua;
 }
 
 /*Pedidos*/
@@ -321,53 +387,6 @@ h4 {
 .row-items-total {
   border-left: 1px solid rgba(234, 234, 234, 0.683);
   border-right: 1px solid rgba(234, 234, 234, 0.683);
-}
-
-/*Login*/
-.col-login {
-  padding: 5px 80px 0px 80px !important;
-}
-.col-forgot-pss {
-  text-align: right;
-  padding: 8px 20px 0px 0px !important;
-  font-size: 12px;
-  color: rgb(136, 134, 134);
-}
-.col-forgot-pss a {
-  cursor: pointer;
-}
-.col-forgot-pss a:hover {
-  color: rgb(63, 63, 63) !important;
-}
-.col-login-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 60px 5px 10px 5px;
-}
-#create-account-button {
-  width: 40%;
-}
-#login-button {
-  width: 70%;
-}
-
-/*Create account*/
-.row-message-1-create-account, .row-message-2-create-account {
-  font-size: 12px;
-  color: rgb(136, 134, 134);
-}
-.row-message-1-create-account {
-  padding: 30px 25px 0px 25px;
-}
-.row-message-2-create-account {
-  padding: 8px 25px 0px 25px;
-}
-.col-button-create-account {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 60px 5px 10px 5px;
 }
 
 /*Register*/
