--- a/src/App.css
+++ b/src/App.css
@@ -150,17 +150,37 @@ button#dropdown-toggle-user.dropdown-toggle.btn.btn-primary::after {
 /*********************************************************
 ***************************LOGIN***************************
 **********************************************************/
-
+.create-account {
+  padding-top: 50px;
+}
 /*----------Posicionamientos----------*/
-.col-login-button, .col-button-create-account {
+.col-login-button {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.col-button-create-account {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  margin-left: 25px;
+}
+#create-account-title {
+  font-size: 14.5px !important;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: rgb(29, 29, 29);
+}
+#signin-title {
+  font-size: 23px !important;
+  text-align: center;
+  padding-left: 160px;
+}
+
 /*Login*/
 .col-login {
-  padding: 5px 80px 0px 80px !important;
+  padding: 5px 0px 0px 160px !important;
 }
 .col-forgot-pss {
   text-align: right;
@@ -179,7 +199,7 @@ button#dropdown-toggle-user.dropdown-toggle.btn.btn-primary::after {
   padding: 60px 5px 10px 5px;
 }
 #create-account-button {
-  width: 40%;
+  width: 35%;
 }
 #login-button {
   width: 70%;
@@ -209,7 +229,7 @@ button#dropdown-toggle-user.dropdown-toggle.btn.btn-primary::after {
   font-size: 10px;
 }
 .container-specific-content {
-  margin-top: 80px !important;
+  margin-top: 70px !important;
   margin-bottom: 130px;
 }
 .breadcrumb-active a {
@@ -234,9 +254,6 @@ footer {
   width: 100%;
   min-height: 15vh;
   background-color: rgb(0, 0, 0);
-}
-h4 {
-  text-align: center;
 }
 
 /*Comun properties*/
